--- a/SimplePassApp/res/layout/act_select_account.xml
+++ b/SimplePassApp/res/layout/act_select_account.xml
@@ -8,9 +8,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".ActSelectAccount" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+    <fragment
+        android:id="@+id/accountFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        class="com.nakedferret.simplepass.FragListAccounts_" >
+    </fragment>
 
 </RelativeLayout>
