--- a/SimplePassApp/res/values-sw600dp/dimens.xml
+++ b/SimplePassApp/res/values-sw600dp/dimens.xml
@@ -1,8 +1,6 @@
 <resources>
 
-    <!--
-         Customize dimensions originally defined in res/values/dimens.xml (such as
-         screen margins) for sw600dp devices (e.g. 7" tablets) here.
-    -->
+    <integer name="widthPercent">70</integer>
+    <integer name="heightPercent">70</integer>
 
 </resources>
