--- a/SimplePassApp/res/values-sw720dp-land/dimens.xml
+++ b/SimplePassApp/res/values-sw720dp-land/dimens.xml
@@ -1,9 +1,8 @@
 <resources>
 
-    <!--
-         Customize dimensions originally defined in res/values/dimens.xml (such as
-         screen margins) for sw720dp devices (e.g. 10" tablets) in landscape here.
-    -->
     <dimen name="activity_horizontal_margin">128dp</dimen>
+    <integer name="widthPercent">50</integer>
+    <integer name="heightPercent">70</integer>
+    
 
 </resources>
