--- a/SimplePassApp/res/layout/act_main.xml
+++ b/SimplePassApp/res/layout/act_main.xml
@@ -33,18 +33,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/testDataButton"
-        android:layout_marginLeft="14dp"
+        android:layout_marginLeft="15dp"
         android:layout_toRightOf="@+id/testDataButton"
         android:text="Test Query" />
 
     <Button
-        android:id="@+id/testGeneric"
+        android:id="@+id/testFrags"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/insertButton"
-        android:paddingTop="@dimen/activity_vertical_margin"
+        android:layout_marginTop="15dp"
         android:text="Test Generic" />
 
 </RelativeLayout>
