--- a/SimplePassApp/res/layout/frag_create_vault.xml
+++ b/SimplePassApp/res/layout/frag_create_vault.xml
@@ -3,10 +3,6 @@
     android:id="@+id/RelativeLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".FragCreateVault" >
 
     <!-- TODO: Update blank fragment layout -->
@@ -18,7 +14,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:ems="10"
-        android:hint="@string/vaultNameHint" >
+        android:hint="@string/vaultNameHint"
+        android:paddingTop="@dimen/activity_vertical_margin" >
 
         <requestFocus />
     </EditText>
@@ -51,5 +48,28 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword" />
+
+    <View
+        android:id="@+id/separator"
+        android:layout_width="1dp"
+        android:layout_height="1dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:id="@+id/cancelButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@+id/separator"
+        android:text="@string/cancel" />
+
+    <Button
+        android:id="@+id/createButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_toRightOf="@+id/separator"
+        android:text="@string/create" />
 
 </RelativeLayout>
