Abandoning idea of testing the device speed
My meager and simple testing suggests that there is too much time
variance in calculating the key with the same number of iterations due
to the devices clocking down and up

--- a/SimplePassApp/res/layout/act_frag_test.xml
+++ b/SimplePassApp/res/layout/act_frag_test.xml
@@ -33,12 +33,20 @@
     </FrameLayout>
 
     <Button
+        android:id="@+id/speedButton"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/createVault"
+        android:text="Speed" />
+
+    <Button
         android:id="@+id/createVault"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/vaultButton"
-        android:layout_marginLeft="10dp"
+        android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/vaultButton"
         android:text="Create" />
 
