Changed from dynamic iterations to hard coded iterations
Now users have to choose between 4 levels of security in their vaults:
Convenient (2500 iterations), Safe (5000), Safer (7500), Paranoid
(15000)

--- a/SimplePassApp/res/layout/frag_create_vault.xml
+++ b/SimplePassApp/res/layout/frag_create_vault.xml
@@ -24,14 +24,14 @@
         android:id="@+id/secondsInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/secondsSpinner"
+        android:layout_below="@+id/iterationSpinner"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:gravity="center_horizontal"
         android:text="@string/secondsSpinnerInfo" />
 
     <Spinner
-        android:id="@+id/secondsSpinner"
+        android:id="@+id/iterationSpinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/vaultPasswordInput"
