--- a/SimplePassApp/res/layout/frag_create_vault.xml
+++ b/SimplePassApp/res/layout/frag_create_vault.xml
@@ -43,8 +43,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginTop="10dp"
-            android:hint="@string/vaultNameHint"
-            android:paddingTop="@dimen/activity_vertical_margin" >
+            android:hint="@string/vaultNameHint" >
 
             <requestFocus />
         </EditText>
