Added a createAccount button to ActTestFrag

--- a/SimplePassApp/res/layout/act_frag_test.xml
+++ b/SimplePassApp/res/layout/act_frag_test.xml
@@ -41,4 +41,13 @@
         android:layout_toRightOf="@+id/vaultButton"
         android:text="Create" />
 
+    <Button
+        android:id="@+id/createAccount"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/fragmentContainer"
+        android:layout_toLeftOf="@+id/accountsButton"
+        android:text="Create" />
+
 </RelativeLayout>
