--- a/SimplePassApp/res/layout/frag_create_account.xml
+++ b/SimplePassApp/res/layout/frag_create_account.xml
@@ -91,6 +91,7 @@
             android:layout_alignParentRight="true"
             android:layout_below="@+id/groupHeader"
             android:layout_marginTop="10dp"
+            android:scaleType="fitCenter"
             android:src="@drawable/ic_action_add_dark" />
 
         <Spinner
