--- a/SimplePassApp/res/layout/act_frag_test.xml
+++ b/SimplePassApp/res/layout/act_frag_test.xml
@@ -1,53 +1,8 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragmentContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".ActGenericFragTest" >
 
-    <Button
-        android:id="@+id/vaultButton"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:text="Vault" />
-
-    <Button
-        android:id="@+id/accountsButton"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/vaultButton"
-        android:layout_alignBottom="@+id/vaultButton"
-        android:layout_alignParentRight="true"
-        android:text="Accounts" />
-
-    <FrameLayout
-        android:id="@+id/fragmentContainer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/accountsButton"
-        android:layout_centerHorizontal="true" >
-    </FrameLayout>
-
-    <Button
-        android:id="@+id/createVault"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/vaultButton"
-        android:text="Create" />
-
-    <Button
-        android:id="@+id/createAccount"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/fragmentContainer"
-        android:layout_toLeftOf="@+id/accountsButton"
-        android:text="Create" />
-
-</RelativeLayout>
+</FrameLayout>
