Changed the way the backend works with the front end
Now all communication happens between the ApplicationSimplePass object

--- a/SimplePassApp/res/layout/listview_account.xml
+++ b/SimplePassApp/res/layout/listview_account.xml
@@ -12,8 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:text="Account"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:text="Account" />
 
     <TextView
         android:id="@android:id/text2"
