Updated the Fragments to use the "enhanced" argument injection

--- a/SimplePassApp/res/layout/listview_account.xml
+++ b/SimplePassApp/res/layout/listview_account.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:text="Account" />
+        android:text="Account"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
         android:id="@android:id/text2"
