--- a/SimplePassApp/res/values/styles.xml
+++ b/SimplePassApp/res/values/styles.xml
@@ -1,6 +1,6 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="AppTheme" parent="Theme.Sherlock.Light.DarkActionBar"></style>
+    <style name="AppTheme" parent="@android:style/Theme.Holo.Light.DarkActionBar"></style>
 
     <style name="PopupTheme" parent="AppTheme">
         <item name="android:windowFrame">@null</item>
@@ -10,8 +10,6 @@
         <item name="android:windowSoftInputMode">stateAlwaysHidden</item>
         <item name="android:colorBackgroundCacheHint">@null</item>
         <item name="android:windowIsTranslucent">true</item>
-        <item name="windowActionModeOverlay">true</item>
-        <item name="windowContentOverlay">@null</item>
     </style>
 
 </resources>
