--- a/SimplePassApp/res/layout/act_main.xml
+++ b/SimplePassApp/res/layout/act_main.xml
@@ -9,32 +9,11 @@
     tools:context=".ActMain" >
 
     <Button
-        android:id="@+id/insertButton"
-        style="?android:attr/buttonStyleSmall"
+        android:id="@+id/overlayButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:text="Insert" />
-
-    <Button
-        android:id="@+id/testDataButton"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/insertButton"
-        android:layout_marginLeft="15dp"
-        android:layout_toRightOf="@+id/insertButton"
-        android:text="Test Data" />
-
-    <Button
-        android:id="@+id/testFrags"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="15dp"
-        android:layout_toRightOf="@+id/testDataButton"
-        android:text="Test Generic" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="@string/start_overlay" />
 
 </RelativeLayout>
