--- a/SimplePassApp/res/layout/importer_detail_listview.xml
+++ b/SimplePassApp/res/layout/importer_detail_listview.xml
@@ -32,7 +32,7 @@
     </ViewFlipper>
 
     <ImageButton
-        android:id="@+id/imageButton1"
+        android:id="@+id/showInfoButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
