--- a/SimplePassApp/res/layout/importer_detail_listview.xml
+++ b/SimplePassApp/res/layout/importer_detail_listview.xml
@@ -13,13 +13,21 @@
         android:layout_centerVertical="true"
         android:src="@drawable/ic_action_view" />
 
+    <CheckBox
+        android:id="@android:id/checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true" />
+
     <TextView
         android:id="@+id/text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@android:id/checkbox"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
