--- a/SimplePassApp/res/layout/importer_detail_listview.xml
+++ b/SimplePassApp/res/layout/importer_detail_listview.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?android:attr/activatedBackgroundIndicator"
     android:descendantFocusability="blocksDescendants" >
 
     <ImageButton
@@ -17,9 +18,9 @@
         android:id="@android:id/checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
         android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true" />
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="5dp" />
 
     <TextView
         android:id="@+id/text1"
