--- a/SimplePassApp/res/values/arrays.xml
+++ b/SimplePassApp/res/values/arrays.xml
@@ -8,6 +8,15 @@
         <item>Ultra</item>
     </string-array>
 
+    <!--  -->
+    <string-array name="fileTypeArray">
+        <item>CSV</item>
+    </string-array>
+    <string-array name="fileFormatArray">
+        <item>LastPass</item>
+        <item>Other</item>
+    </string-array>
+
     <integer-array name="securityLevelIterArray">
         <item>2500</item>
         <item>5000</item>
